Added receive message

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
     <form action="/signin" method="post" enctype="multipart/form-data">
       <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-      <label for="username" class="sr-only">Email address</label>
-      <input type="text" id="username" class="form-control" placeholder="UPI" required autofocus>
-      <label for="password" class="sr-only">Password</label>
-      <input type="password" id="password" class="form-control" placeholder="Password" required>
+      <input type="username" name="username" class="form-control" placeholder="UPI" required autofocus>
+      <input type="password" name="password" class="form-control" placeholder="Password" required>
       <div class="checkbox mb-3">
         <label>
           <input type="checkbox" value="remember-me"> Remember me
