Added a whole bunch of stuff, threading works and auto log off

--- a/login.html
+++ b/login.html
@@ -23,11 +23,11 @@
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
       <input type="username" name="username" class="form-control" placeholder="UPI" required autofocus>
       <input type="password" name="password" class="form-control" placeholder="Password" required>
-      <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-      </div>
+      <select name="location">
+          <option value="2">Rest of the world</option>
+          <option value="1">University Wireless Network</option>
+          <option value="0">University Lab Desktop</option>
+      </select>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
   </body>
