--- a/login.html
+++ b/login.html
@@ -14,13 +14,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="./signin.css" rel="stylesheet">
+    <link href="css/signin.css" rel="stylesheet">
   </head>
 
   <body class="text-center">
     <form action="/signin" method="post" enctype="multipart/form-data">
       <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-      <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+      <img class="logo" src="https://image.ibb.co/cxd0qy/Li_chat.png", alt="Lichat Logo"></a><h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
       <input type="username" name="username" class="form-control" placeholder="UPI" required autofocus>
       <input type="password" name="password" class="form-control" placeholder="Password" required>
       <select name="location">
