--- a/Message.html
+++ b/Message.html
@@ -49,6 +49,7 @@
 		<form action="/sendMessage" method="post" enctype="multipart/form-data">
 		<div class="chat-form">
             <input type="text" name="message" autofocus /><b>
+            <a href="/showFile"><img class="attach" src="https://emojipedia-us.s3.amazonaws.com/thumbs/240/google/119/paperclip_1f4ce.png" alt="attach" ></a>
 			<button id="sendButton" name="recipient" type="submit" value={{sender}}>Send</button></form>
 
         </div>
