committing before revamping profile page

--- a/Profile.html
+++ b/Profile.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/homeStyle.css">
     <title>My Webpage</title>
@@ -53,5 +60,7 @@
 
 
 
+</body>
+</html>
 </body>
 </html>
