Changed stuff lol

--- a/Profile.html
+++ b/Profile.html
@@ -45,6 +45,7 @@
             {% endfor %}
         </div>
         <div class="profileBox">
+            <p class="usernameList">{{error}}</p>
             <img class="usernameList" src="{{profile[0][6]}}" alt="Profile Picture">
              <p class="usernameList"><b>Full name: </b>{{profile[0][2]}}</p>
             <p class="usernameList"><b>Position: </b>{{profile[0][3]}}</p>
