Probably not gonna change any more functionality

--- a/Message.html
+++ b/Message.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>{{title}}</title>
-	<link rel="stylesheet" type="text/css" href="css/messageStyle.css">
+	<link rel="stylesheet" type="text/css" href="static/css/messageStyle.css">
 
 	<!--<meta http-equiv="refresh" content="5">-->
 </head>
@@ -58,7 +58,7 @@
 
 </html>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script  src="css/messaging.js"></script>
+<script  src="static/messaging.js"></script>
 </body>
 
 
